--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.1.0
   http: ^0.13.5
   json_annotation: ^4.8.0
+  flutter_bloc: ^8.1.2 # State management
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
