--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   json_annotation: ^4.8.0
   flutter_bloc: ^8.1.2 # State management
   fluttertoast: ^8.2.1
+  easy_search_bar: ^2.4.2
 
 dev_dependencies:
   flutter_test:
